# text-generation-demo

./: .gitignore  DOCKERFILE  HowThisIsDone.ipynb  README.md  pyproject.toml
app/: main.py
notebooks/: HowThisIsDone.ipynb  bpe.yttm
