[tool.poetry]
name = "app_text_generation_demo"
version = "0.1.0"
description = ""
authors = ["Max Ermakov <maksim_ermakov@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.63.0"
uvicorn = "^0.13.4"
tensorflow = "^2.4.1"
pandas = "^1.2.4"
SQLAlchemy = "^1.4.14"
tqdm = "^4.60.0"
pyarrow = "^4.0.0"
matplotlib = "^3.4.2"
youtokentome = "^1.0.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
